cmake_minimum_required(VERSION 3.16)
project(3)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 REQUIRED COMPONENTS Core Widgets)

qt_standard_project_setup()

qt_add_executable(SegmentPointPosition2 main.cpp)

target_link_libraries(SegmentPointPosition2
    PRIVATE
        Qt6::Core
        Qt6::Widgets
)
